--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -28,7 +28,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700|Yantramanav:500,700,900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Yantramanav:500,700,900&display=swap");
 @import "./icons/style.css";
 
 body {
