--- a/src/styles.css
+++ b/src/styles.css
@@ -878,7 +878,7 @@ img {
   z-index: 10;
 }
 
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700|Yantramanav:500,700,900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Yantramanav:500,700,900&display=swap");
 
 @import "./icons/style.css";
 
