refactor import order and build css

--- a/src/styles.css
+++ b/src/styles.css
@@ -63,11 +63,6 @@ main {
  * `article` contexts in Chrome, Firefox, and Safari.
  */
 
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
 /* Grouping content
    ========================================================================== */
 
@@ -108,29 +103,16 @@ a {
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
 
-abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
-}
-
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
-
-b,
-strong {
-  font-weight: bolder;
-}
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
 
-code,
-kbd,
-samp {
+code {
   font-family: monospace, monospace; /* 1 */
   font-size: 1em; /* 2 */
 }
@@ -139,30 +121,10 @@ samp {
  * Add the correct font size in all browsers.
  */
 
-small {
-  font-size: 80%;
-}
-
 /**
  * Prevent `sub` and `sup` elements from affecting the line height in
  * all browsers.
  */
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
 
 /* Embedded content
    ========================================================================== */
@@ -185,9 +147,7 @@ img {
 
 button,
 input,
-optgroup,
-select,
-textarea {
+select {
   font-family: inherit; /* 1 */
   font-size: 100%; /* 1 */
   line-height: 1.15; /* 1 */
@@ -254,10 +214,6 @@ button:-moz-focusring,
  * Correct the padding in Firefox.
  */
 
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
 /**
  * 1. Correct the text wrapping in Edge and IE.
  * 2. Correct the color inheritance from `fieldset` elements in IE.
@@ -265,30 +221,13 @@ fieldset {
  *    `fieldset` elements in all browsers.
  */
 
-legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
-}
-
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
 
-progress {
-  vertical-align: baseline;
-}
-
 /**
  * Remove the default vertical scrollbar in IE 10+.
  */
-
-textarea {
-  overflow: auto;
-}
 
 /**
  * 1. Add the correct box sizing in IE 10.
@@ -345,17 +284,9 @@ textarea {
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
 
-details {
-  display: block;
-}
-
 /*
  * Add the correct display in all browsers.
  */
-
-summary {
-  display: list-item;
-}
 
 /* Misc
    ========================================================================== */
@@ -403,17 +334,9 @@ html {
  * Removes the default spacing and border for appropriate elements.
  */
 
-blockquote,
-dl,
-dd,
-h1,
-h2,
 h3,
 h4,
-h5,
-h6,
 hr,
-figure,
 p,
 pre {
   margin: 0;
@@ -434,12 +357,6 @@ button:focus {
   outline: 5px auto -webkit-focus-ring-color;
 }
 
-fieldset {
-  margin: 0;
-  padding: 0;
-}
-
-ol,
 ul {
   list-style: none;
   margin: 0;
@@ -513,8 +430,7 @@ textarea {
   resize: vertical;
 }
 
-input::placeholder,
-textarea::placeholder {
+input::placeholder {
   color: #a0aec0;
 }
 
@@ -527,12 +443,8 @@ table {
   border-collapse: collapse;
 }
 
-h1,
-h2,
 h3,
-h4,
-h5,
-h6 {
+h4 {
   font-size: inherit;
   font-weight: inherit;
 }
@@ -557,9 +469,7 @@ a {
 
 button,
 input,
-optgroup,
-select,
-textarea {
+select {
   padding: 0;
   line-height: inherit;
   color: inherit;
@@ -589,12 +499,7 @@ samp {
  */
 
 svg,
-video,
-canvas,
-audio,
-iframe,
-embed,
-object {
+iframe {
   display: block;
   vertical-align: middle;
 }
@@ -612,110 +517,44 @@ video {
   height: auto;
 }
 
-.container {
-  width: 100%;
+.border-r {
+  border-right-width: 1px;
 }
 
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
+.border-b {
+  border-bottom-width: 1px;
 }
 
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
+.cursor-pointer {
+  cursor: pointer;
 }
 
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
+.block {
+  display: block;
 }
 
-.bg-gray-500 {
-  background-color: var(--gray-500);
+.flex {
+  display: -webkit-box;
+  display: flex;
 }
 
-.bg-gray-600 {
-  background-color: var(--gray-600);
+.table {
+  display: table;
 }
 
-.bg-gray-700 {
-  background-color: var(--gray-700);
+.hidden {
+  display: none;
 }
 
-.bg-gray-800 {
-  background-color: var(--gray-800);
+.flex-col {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
 }
 
-.bg-red-100 {
-  background-color: #fff5f5;
-}
-
-.bg-red-200 {
-  background-color: #fed7d7;
-}
-
-.bg-red-300 {
-  background-color: #feb2b2;
-}
-
-.bg-red-400 {
-  background-color: #fc8181;
-}
-
-.bg-red-500 {
-  background-color: #f56565;
-}
-
-.bg-red-600 {
-  background-color: #e53e3e;
-}
-
-.bg-red-700 {
-  background-color: #c53030;
-}
-
-.bg-red-800 {
-  background-color: #9b2c2c;
-}
-
-.bg-red-900 {
-  background-color: #742a2a;
-}
-
-.bg-orange-100 {
-  background-color: #fffaf0;
-}
-
-.bg-orange-200 {
-  background-color: #feebc8;
-}
-
-.bg-orange-300 {
-  background-color: #fbd38d;
-}
-
-.bg-orange-400 {
-  background-color: #f6ad55;
-}
-
-.bg-orange-500 {
-  background-color: #ed8936;
-}
-
-.bg-orange-600 {
-  background-color: #dd6b20;
-}
-
-.bg-orange-700 {
-  background-color: #c05621;
-}
-
-.bg-orange-800 {
-  background-color: #9c4221;
+.items-center {
+  -webkit-box-align: center;
+  align-items: center;
 }
 
 .justify-center {
@@ -728,12 +567,82 @@ video {
   justify-content: space-between;
 }
 
-.bg-yellow-100 {
-  background-color: #fffff0;
+.flex-1 {
+  -webkit-box-flex: 1;
+  flex: 1 1 0%;
 }
 
-.bg-yellow-200 {
-  background-color: #fefcbf;
+.flex-auto {
+  -webkit-box-flex: 1;
+  flex: 1 1 auto;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+
+.font-display {
+  font-family: Yantramanav;
+}
+
+.font-light {
+  font-weight: 300;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.font-extrabold {
+  font-weight: 800;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.leading-none {
+  line-height: 1;
+}
+
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
+.justify-center {
+  -webkit-box-pack: center;
+  justify-content: center;
+}
+
+.justify-between {
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mr-3 {
+  margin-right: 0.75rem;
 }
 
 .bg-red-600 {
@@ -752,56 +661,60 @@ video {
   background-color: #742a2a;
 }
 
-.bg-yellow-500 {
-  background-color: #ecc94b;
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
-.bg-yellow-600 {
-  background-color: #d69e2e;
+.mt-8 {
+  margin-top: 2rem;
 }
 
-.bg-yellow-700 {
-  background-color: #b7791f;
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
-.bg-yellow-800 {
-  background-color: #975a16;
+.overflow-hidden {
+  overflow: hidden;
 }
 
-.bg-yellow-900 {
-  background-color: #744210;
+.p-1 {
+  padding: 0.25rem;
 }
 
-.bg-green-100 {
-  background-color: #f0fff4;
+.p-2 {
+  padding: 0.5rem;
 }
 
-.bg-green-200 {
-  background-color: #c6f6d5;
+.p-3 {
+  padding: 0.75rem;
 }
 
-.bg-green-300 {
-  background-color: #9ae6b4;
+.p-6 {
+  padding: 1.5rem;
 }
 
-.bg-green-400 {
-  background-color: #68d391;
+.p-12 {
+  padding: 3rem;
 }
 
-.bg-green-500 {
-  background-color: #48bb78;
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
-.bg-green-600 {
-  background-color: #38a169;
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 
-.bg-green-700 {
-  background-color: #2f855a;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
-.bg-green-800 {
-  background-color: #276749;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .bg-yellow-500 {
@@ -820,80 +733,80 @@ video {
   background-color: #975a16;
 }
 
-.bg-teal-400 {
-  background-color: #4fd1c5;
+.absolute {
+  position: absolute;
 }
 
-.bg-teal-500 {
-  background-color: #38b2ac;
+.relative {
+  position: relative;
 }
 
-.bg-teal-600 {
-  background-color: #319795;
+.top-0 {
+  top: 0;
 }
 
-.bg-teal-700 {
-  background-color: #2c7a7b;
+.right-0 {
+  right: 0;
 }
 
-.bg-teal-800 {
-  background-color: #285e61;
+.text-gray-100 {
+  color: var(--gray-100);
 }
 
-.bg-teal-900 {
-  background-color: #234e52;
+.text-gray-500 {
+  color: var(--gray-500);
 }
 
-.bg-blue-100 {
-  background-color: #ebf8ff;
+.text-gray-600 {
+  color: var(--gray-600);
 }
 
-.bg-blue-200 {
-  background-color: #bee3f8;
+.text-gray-700 {
+  color: var(--gray-700);
 }
 
-.bg-blue-300 {
-  background-color: #90cdf4;
+.text-gray-800 {
+  color: var(--gray-800);
 }
 
-.bg-blue-400 {
-  background-color: #63b3ed;
+.text-red-500 {
+  color: #f56565;
 }
 
-.bg-blue-500 {
-  background-color: #4299e1;
+.text-orange-600 {
+  color: #dd6b20;
 }
 
-.bg-blue-600 {
-  background-color: #3182ce;
+.text-green-500 {
+  color: #48bb78;
 }
 
-.bg-blue-700 {
-  background-color: #2b6cb0;
+.text-indigo-900 {
+  color: var(--indigo-900);
 }
 
-.bg-blue-800 {
-  background-color: #2c5282;
+.text-xs {
+  font-size: 0.75rem;
 }
 
-.bg-blue-900 {
-  background-color: #2a4365;
+.text-sm {
+  font-size: 0.875rem;
 }
 
-.bg-indigo-900 {
-  background-color: var(--indigo-900);
+.text-base {
+  font-size: 1rem;
 }
 
-.bg-purple-100 {
-  background-color: #faf5ff;
+.text-xl {
+  font-size: 1.25rem;
 }
 
-.bg-purple-200 {
-  background-color: #e9d8fd;
+.text-4xl {
+  font-size: 2.25rem;
 }
 
-.bg-purple-300 {
-  background-color: #d6bcfa;
+.w-2\/4 {
+  width: 50%;
 }
 
 .bg-purple-400 {
@@ -1284,28 +1197,26 @@ video {
   background-color: #b83280;
 }
 
-.hover\:bg-pink-800:hover {
-  background-color: #97266d;
+.w-full {
+  width: 100%;
 }
 
-.hover\:bg-pink-900:hover {
-  background-color: #702459;
+.w-screen {
+  width: 100vw;
 }
 
-.focus\:bg-transparent:focus {
-  background-color: transparent;
+.z-10 {
+  z-index: 10;
 }
 
-.focus\:bg-black:focus {
-  background-color: #000;
-}
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Yantramanav:500,700,900&display=swap");
 
-.focus\:bg-white:focus {
-  background-color: var(--white);
-}
+@import "./icons/style.css";
 
-.focus\:bg-gray-100:focus {
+body {
   background-color: var(--gray-100);
+  color: var(--gray-700);
+  font-size: 14px;
 }
 
 .focus\:bg-gray-200:focus {
