--- a/src/styles.css
+++ b/src/styles.css
@@ -133,10 +133,6 @@ code {
  * Remove the border on images inside links in IE 10.
  */
 
-img {
-  border-style: none;
-}
-
 /* Forms
    ========================================================================== */
 
@@ -420,10 +416,6 @@ hr {
  * https://github.com/tailwindcss/tailwindcss/issues/362
  */
 
-img {
-  border-style: solid;
-}
-
 input::-webkit-input-placeholder {
   color: #a0aec0;
 }
@@ -506,7 +498,7 @@ code {
  * https://github.com/mozdevs/cssremedy/issues/14
  */
 
-img,
+
 svg,
 iframe {
   display: block;
@@ -519,11 +511,6 @@ iframe {
  *
  * https://github.com/mozdevs/cssremedy/issues/14
  */
-
-img {
-  max-width: 100%;
-  height: auto;
-}
 
 .bg-white {
   background-color: var(--white);
@@ -633,6 +620,11 @@ img {
           align-items: center;
 }
 
+.justify-center {
+  -webkit-box-pack: center;
+          justify-content: center;
+}
+
 .justify-between {
   -webkit-box-pack: justify;
           justify-content: space-between;
@@ -648,8 +640,16 @@ img {
           flex: 1 1 auto;
 }
 
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+
 .font-display {
   font-family: Yantramanav;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .font-medium {
@@ -710,16 +710,16 @@ img {
   margin-right: 1rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .mt-8 {
   margin-top: 2rem;
 }
 
 .mb-8 {
   margin-bottom: 2rem;
-}
-
-.opacity-50 {
-  opacity: 0.5;
 }
 
 .overflow-hidden {
@@ -858,10 +858,6 @@ img {
   font-size: 2.25rem;
 }
 
-.w-20 {
-  width: 5rem;
-}
-
 .w-2\/4 {
   width: 50%;
 }
@@ -872,6 +868,10 @@ img {
 
 .w-full {
   width: 100%;
+}
+
+.w-screen {
+  width: 100vw;
 }
 
 .z-10 {
@@ -909,11 +909,39 @@ pre code {
   color: #b3b0bd !important;
 }
 
-.dark-theme img {
-  -webkit-filter: invert(1);
-          filter: invert(1);
-}
-
 .dark-theme button.text-gray-100 {
   color: #fff !important;
+}
+
+/* animations */
+
+#frame-rotate {
+  -webkit-transform-origin: 50% 50%;
+          transform-origin: 50% 50%;
+  -webkit-animation: frame-rotate-animation 30s linear infinite;
+          animation: frame-rotate-animation 30s linear infinite;
+}
+
+@-webkit-keyframes frame-rotate-animation {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+
+  to {
+    -webkit-transform: rotate(3600deg);
+            transform: rotate(3600deg);
+  }
+}
+
+@keyframes frame-rotate-animation {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+
+  to {
+    -webkit-transform: rotate(3600deg);
+            transform: rotate(3600deg);
+  }
 }
